Added atom-json-color atom package

--- a/config.yml
+++ b/config.yml
@@ -8,6 +8,7 @@
 atom_packages:
   - afterglow-monokai-syntax
   - atom-beautify
+  - atom-json-color
   - atom-jinja2
   - atom-terminal-tab
   - autoclose-html
