Added language-ignore atom package.

--- a/config.yml
+++ b/config.yml
@@ -25,6 +25,7 @@ atom_packages:
   - isotope-ui
   - language-ansible
   - language-docker
+  - language-ignore
   - language-nunjucks
   - language-patch
   - linter
