--- a/mac-custom.yml
+++ b/mac-custom.yml
@@ -100,6 +100,7 @@
     - { cask_app_name: "appcleaner", tags: ["appcleaner","stage_4"], role: danbohea.cask-app }
     - { cask_app_name: "steam", tags: ["steam","stage_4"], role: danbohea.cask-app }
     - { cask_app_name: "licecap", tags: ["licecap","stage_4"], role: danbohea.cask-app }
+    - { cask_app_name: "arduino", tags: ["arduino","stage_4"], role: danbohea.cask-app }
 
     # Last
     # --------------------------------------------------------------------------
