Switched Chrome for Firefox in dock_apps

--- a/config.yml
+++ b/config.yml
@@ -53,7 +53,7 @@ dock_apps:
   - Dash.app
   - Skype.app
   - Slack.app
-  - Google Chrome.app
+  - Firefox.app
   - Evernote.app
   - Skitch.app
   - Calendar.app
